<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragmentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:text="@string/disciplinesByChoice"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginTop="@dimen/instructionsTopMargin"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                tools:text="@string/instructions_mobilityModule" />

            <LinearLayout
                android:id="@+id/disciplinesList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:orientation="vertical" />

            <Button
                android:id="@+id/confirmBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/confirmSelectionBtnText" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/status_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/status_image_description"
        tools:src="@drawable/loading_animation" />
</FrameLayout>
