<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.disciplines.presentation.disciplinesMenu.DisciplinesMenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.disciplinesMenu.DisciplinesMenuFragment">

        <TextView
            android:id="@+id/instructionsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/instructions_disciplinesMenu"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/groupNumberET"
            app:layout_constraintEnd_toEndOf="@+id/groupNumberET"
            app:layout_constraintStart_toStartOf="@+id/groupNumberET" />

        <EditText
            android:id="@+id/groupNumberET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/groupNumber_editText_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/default_group_name"
            app:layout_constraintBottom_toTopOf="@+id/disciplinesByChoiceBtn"
            app:layout_constraintEnd_toStartOf="@+id/submitBtn"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/disciplinesByChoiceBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="TextFields" />

        <ImageButton
            android:id="@+id/submitBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/submit_btn_description"
            android:src="@drawable/ic_check"
            app:layout_constraintBottom_toBottomOf="@+id/groupNumberET"
            app:layout_constraintEnd_toEndOf="@+id/disciplinesByChoiceBtn"
            app:layout_constraintStart_toEndOf="@+id/groupNumberET"
            app:layout_constraintTop_toTopOf="@+id/groupNumberET"
            tools:ignore="ImageContrastCheck" />

        <Button
            android:id="@+id/disciplinesByChoiceBtn"
            android:layout_width="@dimen/menuBtnWidth"
            android:layout_height="wrap_content"
            android:text="@string/disciplinesByChoice"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/mobilityModuleBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupNumberET"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/mobilityModuleBtn"
            android:layout_width="@dimen/menuBtnWidth"
            android:layout_height="wrap_content"
            android:text="@string/mobilityModule"
            app:layout_constraintBottom_toTopOf="@+id/electivesBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disciplinesByChoiceBtn"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/electivesBtn"
            android:layout_width="@dimen/menuBtnWidth"
            android:layout_height="wrap_content"
            android:text="@string/electives"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mobilityModuleBtn"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/groupInfoTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/electivesBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>