<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mobilityModule.MobilityModuleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_height="match_parent">

        <TextView
            android:id="@+id/fragmentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEnd"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/marginStartEnd"
            android:text="@string/mobilityModule"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEnd"
            android:layout_marginTop="@dimen/instructionsTopMargin"
            android:layout_marginEnd="@dimen/marginStartEnd"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/radioGroup2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragmentTitle"
            tools:text="@string/instructions_mobilityModule" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEnd"
            android:layout_marginEnd="@dimen/marginStartEnd"
            app:layout_constraintBottom_toTopOf="@+id/btn"
            app:layout_constraintTop_toBottomOf="@+id/instructions"/>

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/confirmSelectionBtnText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>